2003-05-17  Callum McKenzie  <callum@physics.otago.ac.nz>

	* *.scm: Updated the scheme files to use the new gettext
	call.

	* sol.c: Changed the code so that using --variation to select a
	game only works for that one session. This is an awful hack, but I
	can't see a better way to do it.

2003-05-16  Callum McKenzie  <callum@physics.otago.ac.nz>

	* klondike.scm (get-options): 
	* poker.scm (get-hint): Added gettext calls in the scheme code.

	* dialog.c (show_hint_dialog): 
	* cscmi.c (scm_gettext): Added a scheme wrapper for gettext. Now
	if only we could extract the strings from the schemes files ...

	* Makefile.am: Created a freecell emulation desktop entry.

	* menu.c: Removed reference to scroll-menu.h. I did remember to
	test, I just didn't test properly :(.

2003-05-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Removed scroll-menu.*, the code isn't used anymore.

2003-05-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (SUBDIRS): Removing the old pixmaps directory. 600k
	of pixmaps that aren't used by anything.

	* sol.h: 
	* card.h: Remove pathnames in include directives. The correct path
	to gdk-card-image.h is now handled in Makefile.am .

	* Makefile.am: Updated to allow for the movement of the
	gdk-card-image code.

2003-05-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* events.c: Re-implemented the double-click code to ensure double
	click events don't happen when the second click is on a different
	card. Fixes #102449

2003-05-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* dialog.c (show_select_game_dialog): More changes to try and
	improve the "Select" dialog. As per bug #110730.

	* menu.c: Renamed the "New game of..." item to "Select...", the
	justification for this can be found in bug #110730.

2003-05-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* yukon.scm (check-a-tableau): Finally applying my fix to bug
	#64236.

	* sol.c (eval_installed_file): HIG fixup as per bug #112244.
