@@ -1,3 +1,9 @@
+2003-05-18  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* Makefile.am: Arranged for the autogeneration of SCHEME_GAMES.h
+	since I don't understand how to get the strings automatically
+	extracted from the .scm files using intltool.
+
 2003-05-17  Callum McKenzie  <callum@physics.otago.ac.nz>
 
 	* *.scm: Updated the scheme files to use the new gettext
